fix issue on mobile

--- a/client/pages/items/ItemCard.module.scss
+++ b/client/pages/items/ItemCard.module.scss
@@ -4,10 +4,6 @@
 .imgWrapper {
   border-radius: $border-radius;
   cursor: pointer;
-  @media all and (max-width: 480px) {
-    height: 92.5%;
-    width: 92.5%;
-  }
   img {
     object-fit: contain;
     width: 100% !important;
